@@ -309,23 +309,23 @@ static void IN_CrouchDown (void)
 
 static void IN_CrouchUp (void)
 {
-	if (key_dest == key_game)
-	{
+//	if (key_dest == key_game)
+//	{
 //		int state = in_crouch.state;
 		KeyUp(&in_crouch);
 //		if ((state & 1) && !(in_crouch.state & 1))
 //			in_impulse = 22;
-	}
+//	}
 }
 
 static void IN_infoPlaqueUp (void)
 {
 // lower the plaque
-	if (key_dest == key_game)
-	{
+//	if (key_dest == key_game)
+//	{
 		info_up = false;
 		KeyUp(&in_infoplaque);
-	}
+//	}
 }
 
 static void IN_infoPlaqueDown (void)
